fix: some new methodfor .toList made